--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,9 +1,11 @@
 ---
 import { getEntryBySlug } from 'astro:content';
 import Layout from '../../components/Layout.astro';
+import { generateCategories } from '../../utils/helpers';
 
 const { slug } = Astro.params;
 const post = await getEntryBySlug('blog', slug);
+if (!post) return Astro.redirect("/404");
 const { Content } = await post.render();
 ---
 <Layout title="Blog">
@@ -14,7 +16,13 @@ const { Content } = await post.render();
                     <div class="p-6">
                         <div class="flex items-center justify-between">
                             <span class="text-xs text-neutral-500">{post.data.date.toLocaleString('en-US', {day: 'numeric', month: 'long', year: 'numeric'})}</span>							
-                            <!-- <h3 class="text-xs text-neutral-500">{post.data.type}</h3> -->
+                            <span class="text-xs text-neutral-500">
+                                {generateCategories(post.data.categories).map(category => (
+                                    <>
+                                        &nbsp;<a href={`/category/${category.slug}`} class="hover:text-wissen-orange">{category.name}</a>
+                                    </>
+                                ))}
+                            </span>
                         </div>
                         <h2>{post.data.title}</h2>
                         <p>{post.data.description}</p>
