--- a/src/pages/recipes/index.astro
+++ b/src/pages/recipes/index.astro
@@ -19,7 +19,7 @@ const posts = await getCollection('recipes').then(entries => entries.filter(entr
 								<h2 class="text-lg text-neutral-600 mt-2 mb-3">{post.data.title}</h2>
 								<p class="mb-3 text-sm">{post.data.description}</p>
 								<div class="flex items-center flex-wrap ">
-									<a href={`/blog/${post.slug}`} class="bg-wissen-blue hover:scale-105 shadow px-4 py-1 rounded-lg">read more..</a>
+									<a href={`/recipes/${post.slug}`} class="bg-wissen-blue hover:scale-105 shadow px-4 py-1 rounded-lg">read more..</a>
 								</div>
 							</div>
 						</div>
