--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,23 +6,21 @@ const posts = await getCollection('blog').then(entries => entries.filter(entry =
 <Layout title="Blog">
     <div class="bg-gray-900 shadow-lg rounded-b mx-auto">
 		<section class="px-2 py-2">
-			<div class="">
-				<div class="flex items-start justify-left">
+			<div class="p-2">
+				<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
 					{posts.map((post) => (
-						<div class="p-2 md:w-1/3">
 						<div class="h-full rounded-xl bg-neutral-200 overflow-hidden">
 						{/*<img class="lg:h-48 md:h-36 w-full bg-wissen-blue object-cover object-center scale-110 transition-all duration-400 hover:scale-100" src="" alt="">*/}
-							<div class="p-6">
+							<div class="p-4 h-full relative">
 								<div class="flex items-center justify-between">
 									<span class="text-xs text-neutral-500">{post.data.date.toLocaleString('en-US', {day: 'numeric', month: 'long', year: 'numeric'})}</span>							
 								</div>
 								<h2 class="text-lg text-neutral-600 mt-2 mb-3">{post.data.title}</h2>
-								<p class="mb-3 text-sm">{post.data.description}</p>
-								<div class="flex items-center flex-wrap ">
+								<p class="mb-10 text-sm">{post.data.description}</p>
+								<div class="flex items-center absolute bottom-4 right-4">
 									<a href={`/blog/${post.slug}`} class="bg-wissen-blue hover:scale-105 shadow px-4 py-1 rounded-lg">read more..</a>
 								</div>
 							</div>
-						</div>
 						</div>
 					))}
 				</div>
