--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,8 +2,12 @@
 import { getCollection } from 'astro:content';
 import Layout from '../../components/Layout.astro';
 const posts = await getCollection('blog').then(entries => entries.filter(entry => !entry.data.draft).sort((a: any, b: any) => new Date(b.data.date).valueOf() - new Date(a.data.date).valueOf()));
+const meta = {
+    title: "",
+    description: ""
+}
 ---
-<Layout title="Blog">
+<Layout title="Blog" meta={meta}>
     <div class="bg-gray-900 shadow-lg rounded-b mx-auto">
 		<section class="px-2 py-2">
 			<div class="p-2">
