--- a/src/pages/category/[...slug].astro
+++ b/src/pages/category/[...slug].astro
@@ -8,8 +8,12 @@ const blogs = await getCollection('blog').then(entries => entries.filter(entry =
 const recipes = await getCollection('recipes').then(entries => entries.filter(entry => !entry.data.draft).filter(entry => generateCategories(entry.data.categories).map(category => category.slug).includes(slug)).map((entry) => ({...entry.data, type: 'recipes', url: `/recipes/${entry.slug}`})));
 const posts = [...blogs, ...recipes].sort((a: any, b: any) => new Date(b.date).valueOf() - new Date(a.date).valueOf());
 if (!posts || posts.length === 0) return Astro.redirect("/404");
+const meta = {
+    title: "",
+    description: ""
+}
 ---
-<Layout title="">
+<Layout title="" meta={meta}>
     <div class="bg-gray-900 shadow-lg rounded-b mx-auto">
 		<section class="px-2 py-2">
 			<div class="p-2">
