--- a/src/pages/category/[...slug].astro
+++ b/src/pages/category/[...slug].astro
@@ -23,7 +23,7 @@ const meta = {
 						{/*<img class="lg:h-48 md:h-36 w-full bg-wissen-blue object-cover object-center scale-110 transition-all duration-400 hover:scale-100" src="" alt="">*/}
 							<div class="p-4 h-full relative">
 								<div class="flex items-center justify-between">
-									<span class="text-xs text-neutral-500">{post.date.toLocaleString('en-US', {day: 'numeric', month: 'long', year: 'numeric'})}</span>							
+									<span class="text-xs text-neutral-500">{post.date.toLocaleString('en-US', {day: 'numeric', month: 'long', year: 'numeric', timeZone: 'Europe/Amsterdam'})}</span>							
 									<h3 class="text-xs text-neutral-600">{post.type}</h3>
 								</div>
 								<h2 class="text-lg text-neutral-600 mt-2 mb-3">{post.title}</h2>
