Add post about sitemap xml

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -50,4 +50,7 @@ const meta = {
     article a {
         @apply text-wissen-orange underline hover:text-wissen-blue
     }
+    article .astro-code {
+        @apply p-4 rounded-lg shadow border-neutral-600 border
+    }
 </style>
