Fix 404 page image

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -9,7 +9,7 @@ const meta = {
 	<div class="bg-gray-900 shadow-lg rounded-b mx-auto">
         <article class="px-2 py-2">
             <div class="p-2">
-                <img src="https://cdn.31f-fotografie.nl/_D011969.jpg" alt="404 Image" class="w-full h-full rounded" />
+                <img src="/images/404/webp" alt="404 Image" class="w-full h-full rounded" />
                 <div class="flex items-center justify-between">
                     <h1 class="mt-6 text-xl text-neutral-100">404 Not Found</h1>
                 </div>
