Did some cleaning, dependency updates, and other things..

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,15 +1,25 @@
 ---
-import Layout from '../components/Layout.astro';
-const meta = {
-    title: "",
-    description: ""
-}
+import Layout from '@layouts/Layout.astro';
 ---
-<Layout title="404 Not Found" meta={meta}>
-	<div class="bg-gray-900 shadow-lg rounded-b mx-auto">
+
+<Layout>
+    <Fragment slot="head">
+        <title>404 Not Found - Jeroen van Wissen</title>
+        <meta content="noindex, nofollow" name="robots" />
+        <meta content="website" property="og:type" />
+        <meta content="404 Not Found - Jeroen van Wissen" property="og:title" />
+        <meta content="404 Not Found - Jeroen van Wissen" name="description" />
+        <meta content="404 Not Found - Jeroen van Wissen" property="og:description" />
+        <meta content={`${import.meta.env.SITE}/404`} property="og:url" />
+        <meta content={`${import.meta.env.SITE}/images/og-image.webp`} property="og:image" />
+        <meta content={`${import.meta.env.SITE}/images/og-image.webp`} property="twitter:image:src" />
+        <link href={`${import.meta.env.SITE}/404`} rel="canonical" />
+    </Fragment>
+    <Fragment slot="title">404 Not Found - Jeroen van Wissen</Fragment>
+    <div class="mx-auto rounded-b bg-gray-900 shadow-lg">
         <article class="px-2 py-2">
             <div class="p-2">
-                <img src="/images/404.webp" alt="404 Image" class="w-full h-full rounded" />
+                <img src="/images/404.webp" alt="404 Image" class="h-full w-full rounded" />
                 <div class="flex items-center justify-between">
                     <h1 class="mt-6 text-xl text-neutral-100">404 Not Found</h1>
                 </div>
@@ -23,12 +33,12 @@ const meta = {
 
 <style is:global>
     article h2 {
-        @apply mt-6 text-xl text-neutral-100
+        @apply mt-6 text-xl text-neutral-100;
     }
     article p {
-        @apply mt-3 mb-4 text-neutral-200 text-justify
+        @apply mt-3 mb-4 text-justify text-neutral-200;
     }
     article a {
-        @apply text-wissen-orange underline hover:text-wissen-blue
+        @apply text-wissen-orange underline hover:text-wissen-blue;
     }
 </style>
