--- a/src/pages/category/[...slug].astro
+++ b/src/pages/category/[...slug].astro
@@ -1,35 +1,42 @@
 ---
-import { getCollection } from 'astro:content';
-import Layout from '../../components/Layout.astro';
-import { generateCategories } from '../../utils/helpers';
+import Layout from '@layouts/Layout.astro';
+import { getEntriesByCategorySlug } from '@lib/util';
 
 const { slug } = Astro.params;
-const blogs = await getCollection('blog').then(entries => entries.filter(entry => !entry.data.draft).filter(entry => generateCategories(entry.data.categories).map(category => category.slug).includes(slug)).map((entry) => ({...entry.data, type: 'blog', url: `/blog/${entry.slug}`})));
-const recipes = await getCollection('recipes').then(entries => entries.filter(entry => !entry.data.draft).filter(entry => generateCategories(entry.data.categories).map(category => category.slug).includes(slug)).map((entry) => ({...entry.data, type: 'recipes', url: `/recipes/${entry.slug}`})));
-const posts = [...blogs, ...recipes].sort((a: any, b: any) => new Date(b.date).valueOf() - new Date(a.date).valueOf());
-if (!posts || posts.length === 0) return Astro.redirect("/404");
-const meta = {
-    title: "",
-    description: ""
-}
+if (slug === undefined) return Astro.redirect('/404');
+
+const {category, entries} = await getEntriesByCategorySlug(slug);
+if (!entries || entries.length === 0) return Astro.redirect("/404");
 ---
-<Layout title="" meta={meta}>
-    <div class="bg-gray-900 shadow-lg rounded-b mx-auto">
+<Layout>
+    <Fragment slot="head">
+        <title>Entries in the category: {category.name} - Jeroen van Wissen</title>
+        <meta content="website" property="og:type" />
+        <meta content={`Entries in the category: ${category.name} - Jeroen van Wissen`} property="og:title" />
+        <meta content={`Entries in the category: ${category.name} - Jeroen van Wissen`} name="description" />
+        <meta content={`Entries in the category: ${category.name} - Jeroen van Wissen`} property="og:description" />
+        <meta content={`${import.meta.env.SITE}/category/${slug}`} property="og:url" />
+        <meta content={`${import.meta.env.SITE}/images/og-image.webp`} property="og:image" />
+        <meta content={`${import.meta.env.SITE}/images/og-image.webp`} property="twitter:image:src" />
+        <link href={`${import.meta.env.SITE}/category/${slug}`} rel="canonical" />
+    </Fragment>
+    <Fragment slot="title">{category.name} - Jeroen van Wissen</Fragment>
+	<div class="bg-gray-900 shadow-lg rounded-b mx-auto">
 		<section class="px-2 py-2">
 			<div class="p-2">
 				<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-					{posts.map((post) => (
+					{entries.map((entry) => (
 						<div class="h-full rounded-xl bg-neutral-200 overflow-hidden">
 						{/*<img class="lg:h-48 md:h-36 w-full bg-wissen-blue object-cover object-center scale-110 transition-all duration-400 hover:scale-100" src="" alt="">*/}
 							<div class="p-4 h-full relative">
 								<div class="flex items-center justify-between">
-									<span class="text-xs text-neutral-500">{post.date.toLocaleString('en-US', {day: 'numeric', month: 'long', year: 'numeric', timeZone: 'Europe/Amsterdam'})}</span>							
-									<h3 class="text-xs text-neutral-600">{post.type}</h3>
+									<span class="text-xs text-neutral-500">{entry.data.date.toLocaleString('en-US', {day: 'numeric', month: 'long', year: 'numeric', timeZone: 'Europe/Amsterdam'})}</span>							
+									<h3 class="text-xs text-neutral-600">{entry.collection}</h3>
 								</div>
-								<h2 class="text-lg text-neutral-600 mt-2 mb-3">{post.title}</h2>
-								<p class="mb-10 text-sm">{post.description}</p>
+								<h2 class="text-lg text-neutral-600 mt-2 mb-3">{entry.data.title}</h2>
+								<p class="mb-10 text-sm">{entry.data.description}</p>
 								<div class="flex items-center absolute bottom-4 right-4">
-									<a href={post.url} class="bg-wissen-blue hover:scale-105 shadow px-4 py-1 rounded-lg">read more..</a>
+									<a href={`/${entry.collection}/${entry.slug}`} class="bg-wissen-blue hover:scale-105 shadow px-4 py-1 rounded-lg">read more..</a>
 								</div>
 							</div>
 						</div>
