--- a/src/pages/recipes/[...slug].astro
+++ b/src/pages/recipes/[...slug].astro
@@ -1,53 +1,72 @@
 ---
 import { getEntryBySlug } from 'astro:content';
-import Layout from '../../components/Layout.astro';
-import { generateCategories } from '../../utils/helpers';
+import { generateCategories } from '@lib/util';
+import Layout from '@layouts/Layout.astro';
 
 const { slug } = Astro.params;
-const post = await getEntryBySlug('recipes', slug);
-if (!post) return Astro.redirect("/404");
-const { Content } = await post.render();
-const meta = {
-    title: `Jeroen van Wissen - ${post.data.title}`,
-    description: post.data.description
-}
+if (slug === undefined) return Astro.redirect('/404');
+
+const entry = await getEntryBySlug('recipes', slug);
+if (entry === undefined) return Astro.redirect('/404');
+
+const { Content } = await entry.render();
 ---
-<Layout title="Recipes" meta={meta}>
-    <div class="bg-gray-900 shadow-lg rounded-b mx-auto">
-        <article class="px-2 py-2">
-            <div class="p-2">
-                    {/*<img class="lg:h-48 md:h-36 w-full bg-wissen-blue object-cover object-center scale-110 transition-all duration-400 hover:scale-100" src="" alt="">*/}
-                    <div class="p-6">
-                        <div class="flex items-center justify-between">
-                            <span class="text-xs text-neutral-500">{post.data.date.toLocaleString('en-US', {day: 'numeric', month: 'long', year: 'numeric', timeZone: 'Europe/Amsterdam'})}</span>							
-                            <span class="text-xs text-neutral-500">
-                                {generateCategories(post.data.categories).map(category => (
+
+<Layout>
+    <Fragment slot="head">
+        <title>{entry.data.title} - Jeroen van Wissen</title>
+        <meta content="website" property="og:type" />
+        <meta content={`${entry.data.title} - Jeroen van Wissen`} property="og:title" />
+        <meta content={entry.data.description} name="description" />
+        <meta content={entry.data.description} property="og:description" />
+        <meta content={`${import.meta.env.SITE}/recipes/${entry.slug}`} property="og:url" />
+        <meta content={`${import.meta.env.SITE}/images/og-image.webp`} property="og:image" />
+        <meta content={`${import.meta.env.SITE}/images/og-image.webp`} property="twitter:image:src" />
+        <link href={`${import.meta.env.SITE}/recipes/${entry.slug}`} rel="canonical" />
+    </Fragment>
+    <div class="mx-auto rounded-b bg-gray-900 shadow-lg">
+        <article class="py-2 md:px-2">
+            <div class="md:p-2">
+                {/*<img class="lg:h-48 md:h-36 w-full bg-wissen-blue object-cover object-center scale-110 transition-all duration-400 hover:scale-100" src="" alt="">*/}
+                <div class="p-4 md:p-6">
+                    <div class="items-center justify-between md:flex">
+                        <div class="flex text-xs text-neutral-500">{entry.data.date.toLocaleString('en-US', { day: 'numeric', month: 'long', year: 'numeric', timeZone: 'Europe/Amsterdam' })}</div>
+                        <div class="flex pt-2 text-xs text-neutral-500 md:pt-0">
+                            {
+                                generateCategories(entry.data.categories).map((category) => (
                                     <>
-                                        &nbsp;<a href={`/category/${category.slug}`} class="hover:text-wissen-orange">{category.name}</a>
+                                        <a href={`/category/${category.slug}`} class="hover:text-wissen-orange">
+                                            {category.name}
+                                        </a>
+                                        &nbsp;
                                     </>
-                                ))}
-                            </span>
+                                ))
+                            }
                         </div>
-                        <h2>{post.data.title}</h2>
-                        <p>{post.data.description}</p>
-                        <Content />
-                        <p>
-                            <a href="/recipes">&larr; back to all recipes</a>
-                        </p>
                     </div>
+                    <h2>{entry.data.title}</h2>
+                    <p>{entry.data.description}</p>
+                    <Content />
+                    <p>
+                        <a href="/recipes">&larr; back to all recipes</a>
+                    </p>
+                </div>
             </div>
         </article>
-	</div>
+    </div>
 </Layout>
 
 <style is:global>
     article h2 {
-        @apply mt-6 text-xl text-neutral-100
+        @apply mt-4 text-base font-bold text-neutral-100 md:mt-6 md:text-xl;
     }
     article p {
-        @apply mt-3 mb-4 text-neutral-200 text-justify
+        @apply mt-3 mb-4 text-justify text-neutral-200;
     }
     article a {
-        @apply text-wissen-orange underline hover:text-wissen-blue
+        @apply text-wissen-orange underline hover:text-wissen-blue;
+    }
+    article .astro-code {
+        @apply rounded-lg border border-neutral-600 p-2 text-xs shadow md:p-4 md:text-base;
     }
 </style>
