--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const entries = await getAllSortedEntries();
     <div class="mx-auto rounded-b bg-gray-900 shadow-lg">
         <div class="flex">
             <div class="items-start px-4 py-6 md:flex">
-                <img class="mr-4 h-40 w-40 rounded-full object-cover shadow" src="/images/avatar2.webp" alt="avatar" />
+                <img class="mr-4 h-40 w-40 rounded-full object-cover shadow" src="/images/jeroen.webp" alt="Jeroen van Wisen Photo" />
                 <div class="">
                     <div class="flex items-center justify-between">
                         <h2 class="text-lg font-bold text-neutral-200">Jeroen van Wissen</h2>
