--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -16,13 +16,11 @@ import Layout from '@layouts/Layout.astro';
         <link href={`${import.meta.env.SITE}/404`} rel="canonical" />
     </Fragment>
     <Fragment slot="title">404 Not Found - Jeroen van Wissen</Fragment>
-    <div class="mx-auto rounded-b bg-gray-900 shadow-lg">
-        <article class="px-2 py-2">
-            <div class="p-2">
-                <img src="/images/404.webp" alt="404 Image" class="h-full w-full rounded" />
-                <div class="flex items-center justify-between">
-                    <h1 class="mt-6 text-xl text-neutral-100">404 Not Found</h1>
-                </div>
+    <div class="mx-auto rounded-lg bg-secondary-800 shadow-lg">
+        <article>
+            <img src="/images/404.webp" alt="404 Image" class="h-[400px] w-full rounded-t-lg object-cover object-bottom" />
+            <div class="p-4">
+                <h1 class="text-2xl text-primary-50">404 Not Found</h1>
                 <p>
                     The page you're trying to load does not exist... go to the <a href="/">homepage</a>
                 </p>
@@ -33,12 +31,12 @@ import Layout from '@layouts/Layout.astro';
 
 <style is:global>
     article h2 {
-        @apply mt-6 text-xl text-neutral-100;
+        @apply mt-4 text-base font-bold text-primary-50 md:mt-6 md:text-xl;
     }
     article p {
-        @apply mt-3 mb-4 text-justify text-neutral-200;
+        @apply mt-3 mb-4 text-primary-50;
     }
     article a {
-        @apply text-wissen-orange underline hover:text-wissen-blue;
+        @apply text-primary-500 underline hover:text-primary-300;
     }
 </style>
