--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -3,12 +3,12 @@ import { generateCategories, getSortedEntriesFromCollection } from '@lib/util';
 import Layout from '@layouts/Layout.astro';
 
 export async function getStaticPaths() {
-	return (await getSortedEntriesFromCollection('blog')).map((entry) => {
-		return {
-			params: { slug: entry.slug },
-			props: { entry },
-		};
-	});
+    return (await getSortedEntriesFromCollection('blog')).map((entry: any) => {
+        return {
+            params: { slug: entry.slug },
+            props: { entry }
+        };
+    });
 }
 
 const { entry } = Astro.props;
@@ -28,33 +28,31 @@ const { Content } = await entry.render();
         <link href={`${import.meta.env.SITE}/blog/${entry.slug}`} rel="canonical" />
     </Fragment>
     <Fragment slot="title">Blog - Jeroen van Wissen</Fragment>
-    <div class="mx-auto rounded-b bg-gray-900 shadow-lg">
-        <article class="py-2 md:px-2">
-            <div class="md:p-2">
-                {/*<img class="lg:h-48 md:h-36 w-full bg-wissen-blue object-cover object-center scale-110 transition-all duration-400 hover:scale-100" src="" alt="">*/}
-                <div class="p-4 md:p-6">
-                    <div class="items-center justify-between md:flex">
-                        <div class="flex text-xs text-neutral-500">{entry.data.date.toLocaleString('en-US', { day: 'numeric', month: 'long', year: 'numeric', timeZone: 'Europe/Amsterdam' })}</div>
-                        <div class="flex pt-2 text-xs text-neutral-500 md:pt-0">
-                            {
-                                generateCategories(entry.data.categories).map((category) => (
-                                    <>
-                                        <a href={`/category/${category.slug}`} class="hover:text-wissen-orange">
-                                            {category.name}
-                                        </a>
-                                        &nbsp;
-                                    </>
-                                ))
-                            }
-                        </div>
+    <div class="mx-auto rounded-lg bg-secondary-800 shadow-lg">
+        <article>
+            {/*<img class="lg:h-48 md:h-36 w-full bg-wissen-blue object-cover object-center scale-110 transition-all duration-400 hover:scale-100" src="" alt="">*/}
+            <div class="p-4 md:p-6">
+                <div class="items-center justify-between md:flex">
+                    <div class="flex text-xs text-primary-50">{entry.data.date.toLocaleString('en-US', { day: 'numeric', month: 'long', year: 'numeric', timeZone: 'Europe/Amsterdam' })}</div>
+                    <div class="flex pt-2 text-xs text-primary-500 md:pt-0">
+                        {
+                            generateCategories(entry.data.categories).map((category) => (
+                                <>
+                                    <a href={`/category/${category.slug}`} class="hover:text-primary-300 underline">
+                                        {category.name}
+                                    </a>
+                                    &nbsp;
+                                </>
+                            ))
+                        }
                     </div>
-                    <h2>{entry.data.title}</h2>
-                    <p>{entry.data.description}</p>
-                    <Content />
-                    <p>
-                        <a href="/blog">&larr; back to all posts</a>
-                    </p>
                 </div>
+                <h2>{entry.data.title}</h2>
+                <p>{entry.data.description}</p>
+                <Content />
+                <p>
+                    <a href="/blog">&larr; back to all posts</a>
+                </p>
             </div>
         </article>
     </div>
@@ -62,15 +60,15 @@ const { Content } = await entry.render();
 
 <style is:global>
     article h2 {
-        @apply mt-4 text-base font-bold text-neutral-100 md:mt-6 md:text-xl;
+        @apply mt-4 text-base font-bold text-primary-50 md:mt-6 md:text-xl;
     }
     article p {
-        @apply mt-3 mb-4 text-justify text-neutral-200;
+        @apply mt-3 mb-4 text-primary-50;
     }
     article a {
-        @apply text-wissen-orange underline hover:text-wissen-blue;
+        @apply text-primary-500 underline hover:text-primary-300;
     }
     article .astro-code {
-        @apply rounded-lg border border-neutral-600 p-2 text-xs shadow md:p-4 md:text-base;
+        @apply rounded-lg border border-secondary-700 p-2 text-xs shadow md:p-4 md:text-base;
     }
 </style>
